# pico-examples

./: CMakeLists.txt
hello_world/: CMakeLists.txt
hello_world/serial/: hello_serial.c
hello_world/tmc2209/: CMakeLists.txt  tmc2209.c
micropython/: simple_can.py
pio/: CMakeLists.txt
pio/can2040/: CMakeLists.txt  can2040.c  can2040.h  can_main.c  launch.json
pio/simple_can/: CMakeLists.txt  simple_can.c  simple_can.pio  simple_gpio.c
